# ShackStack

./: .gitignore  Directory.Build.props  Directory.Build.targets  README.md  Run-ShackStack.ps1  ShackStack.sln
docs/: CURRENT_FEATURE_STATUS_2026-04-27.md  CURRENT_FEATURE_STATUS_2026-04-29.md  DEPLOYMENT_NOTES.md  DIGITAL_MODE_ROADMAP.md  DIGITAL_WEAK_MODE_STATUS_2026-04-27.md  DIGITAL_WEAK_MODE_STATUS_2026-04-29.md  FREEDV_PORT_NOTES.md  NEXT_STEPS_AND_TECH_DEBT_2026-04-27.md  NEXT_STEPS_AND_TECH_DEBT_2026-04-29.md  PROJECT_TRACKING_INDEX.md  RELEASE_1.0_NOTES.md  SSTV_REGRESSION_HARNESS.md  USER_MANUAL.md
installer/: Build-DecoderWorkers.ps1  Build-WsjtxWaveformTools.ps1  ShackStack.iss  Sync-WsjtxRuntimeTools.ps1
src/ShackStack.Core/: NavigationService.cs  OperatingSessionController.cs  SessionStateStore.cs
src/ShackStack.DecoderHost.Ggmorse.Native/: CMakeLists.txt
src/ShackStack.DecoderHost.Ggmorse.Native/include/: shackstack_ggmorse_bridge.h
src/ShackStack.DecoderHost.Ggmorse.Native/src/: shackstack_ggmorse_bridge.cpp
src/ShackStack.DecoderHost.GplCodec2Freedv/: Program.cs  ShackStack.DecoderHost.GplCodec2Freedv.csproj
src/ShackStack.DecoderHost.GplFldigiPsk/: Program.cs  README.md  (+1 more)
tools/: Build-Js8CallDecoder.ps1  Build-Js8CallTx.ps1  Run-FreeDvLoopbackHarness.ps1  Run-FreeDvRadeCallsignHarness.ps1  Run-FreeDvRadeHarness.ps1  Run-FreeDvRadeTxLoopbackHarness.ps1  Run-SstvRegression.ps1  Test-ShackStackShutdown.ps1  cw_smoke.py  js8_sidecar_smoke.ps1  js8_synth_smoke.ps1  js8_tx_smoke.ps1  rtty_compare.py  wefax_smoke.py
(+319 files in other folders)
